sample/error/e02419-iii.asn
E02419-III DEFINITIONS ::=
BEGIN
    seq SEQUENCE {      -- E02419-III
        item    INTEGER
    } ::= {
        item    100,
        item1   199
    }
END
